# advent-of-code-2024

./: Cargo.toml  README.md
.github/scripts/: test.sh
.github/workflows/: update-readme.yml
src/day01/: solution.rs
src/day02/: solution.rs
src/day03/: solution.rs
src/day04/: solution.rs
src/day05/: solution.rs
src/day06/: solution.rs
src/day07/: solution.rs
src/day08/: solution.rs
src/day09/: solution.rs
src/day1/: day1.rs
src/day10/: solution.rs
src/day11/: solution.rs  solution_naive.rs
src/day12/: solution.rs
src/day13/: solution.rs
src/day14/: solution.rs
src/day15/: solution.rs
src/day16/: solution.rs
src/day17/: solution.rs
src/day18/: solution.rs
src/day19/: solution.rs
src/day2/: day2.rs
src/day3/: day3.rs
src/day4/: day4.rs
src/day5/: day5.rs
src/day6/: day6.rs
src/day7/: day7.rs
src/day8/: day8.rs
src/day9/: day9.rs
