[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "day01"
path = "./src/day01/solution.rs"

[[bin]]
name = "day02"
path = "./src/day02/solution.rs"

[[bin]]
name = "day03"
path = "./src/day03/solution.rs"

[[bin]]
name = "day04"
path = "./src/day04/solution.rs"

[[bin]]
name = "day05"
path = "./src/day05/solution.rs"
 
[[bin]]
name = "day06"
path = "./src/day06/solution.rs"

[[bin]]
name = "day07"
path = "./src/day07/solution.rs"
 
[[bin]]
name = "day08"
path = "./src/day08/solution.rs"

[[bin]]
name = "day09"
path = "./src/day09/solution.rs"
 
[[bin]]
name = "day10"
path = "./src/day10/solution.rs"
 
[[bin]]
name = "day11"
path = "./src/day11/solution.rs"
 
[[bin]]
name = "day12"
path = "./src/day12/solution.rs"

[[bin]]
name = "day13"
path = "./src/day13/solution.rs"

[[bin]]
name = "day14"
path = "./src/day14/solution.rs"
 
# [[bin]]
# name = "day15"
# path = "./src/day15/solution.rs"
# 
# [[bin]]
# name = "day16"
# path = "./src/day16/solution.rs"
# 
# [[bin]]
# name = "day17"
# path = "./src/day17/solution.rs"
# 
# [[bin]]
# name = "day18"
# path = "./src/day18/solution.rs"
# 
# [[bin]]
# name = "day19"
# path = "./src/day19/solution.rs"
# 
# [[bin]]
# name = "day20"
# path = "./src/day20/solution.rs"
# 
# [[bin]]
# name = "day21"
# path = "./src/day21/solution.rs"
# 
# [[bin]]
# name = "day22"
# path = "./src/day22/solution.rs"
# 
# [[bin]]
# name = "day23"
# path = "./src/day23/solution.rs"
# 
# [[bin]]
# name = "day24"
# path = "./src/day24/solution.rs"
# 
# [[bin]]
# name = "day25"
# path = "./src/day25/solution.rs"

[dependencies]
